# fastapi_crud_demo

./: .bandit  .env.dist  .gitignore  .tool-versions  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docker/postgres/: init.sql
fastapi_crud_demo/: db.py  main.py  settings.py
fastapi_crud_demo/libs/: auth.py  hash_password.py  jwt.py
fastapi_crud_demo/models/: error.py  team.py  token.py  user.py
fastapi_crud_demo/routes/: health.py  team.py  user.py
fastapi_crud_demo/use_cases/: team.py  user.py
migrations/: env.py
migrations/versions/: 75c9d7bdba13_create_team_table.py  b17e4721cc76_init.py  c5901dd1c564_create_team_user.py
tests/: conftest.py
tests/routes/: test_health.py  test_team.py  test_user.py
