[tool.poetry]
name = "fastapi-crud-demo"
version = "0.1.0"
description = ""
authors = ["Massimo Biagioli <biagiolimassimo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
sqlmodel = "^0.0.14"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
bandit = "^1.7.6"
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
